# Lab6

./: CMakeLists.txt  main.cpp  pnm.hpp
include/: glmio.h
